# PartielMusicPython

./: LICENSE  README.md  pyproject.toml
.github/.workflows/: ci.yml
.github/workflows/: ci.yml
database/: database.db  insert.sql  model.sql
musics/: __init__.py  __main__.py  api.py  cli.py  db.py
tests/: test_api.py  test_cli.py  test_db.py  test_main.py
