[tool.setuptools]
packages = []

[project]
name = 'musics'
version = '0.1'
requires-python = '>=3.10'
dependencies = [
  'pytest',
  'rich',
  'fastapi[standard]',
]

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
addopts = "--cov=musics --cov=tests --cov-report=term-missing"